<resources>
    <string name="app_name">Samples6</string>
    <string name="ex_001_simple_list">001 Simple List</string>
    <string name="ex_002_layout_inflater">002 Layout Inflater</string>
    <string name="empty_text" />
    <string name="name">Name:</string>
    <string name="age">Age:</string>
    <string name="position">Position:</string>
    <string name="ex_003_custom_item">003 Custom Item</string>
    <string name="ex_004_choise_mode_single">004 Single Choice</string>
    <string name="chose_info">Chose Info</string>
    <string name="ex_005_choise_mode_multiple">005 Multiple Choice</string>
    <string name="ex_006_listeners">006 Listeners</string>
    <string name="ex_007_add_data">007 Add Data</string>
    <string name="remove_data">Remove_last</string>
    <string name="check_box">CheckBox</string>
    <string name="ex_008_simple_adapter">008 Simple Adapter</string>
    <string name="ex_009_methods_simple_adapter">009 Methods Simple Adapter</string>
    <string name="ex_010_view_binder">010 View Binder</string>
    <string name="button_text">Test</string>
    <string name="header_title">Header</string>
    <string name="footer_title">Footer</string>
    <string name="ex_011_header_and_footer">011 Header and footer</string>
    <string name="ex_012_spinner">012 Spinner</string>
    <string name="ex_013_grid_view">013 Grid View</string>
    <string name="ex_014_expandable">014 Expandable</string>
    <string name="number_list">All values</string>
    <string name="empty">No data</string>
    <string name="ex_015_list_fragment">015 List Fragment</string>
    <string name="alert_dialog">Show Dialog</string>
    <string name="items">Items</string>
    <string name="adapter">Adapter</string>
    <string name="ex_016_dialog_list">016 Dialog List</string>
    <string name="item1">Item1</string>
    <string name="item2">Item2</string>
    <string name="item3">Item3</string>
    <string name="item4">Item4</string>
    <string name="ex_017_action_mode">017 Action Mode</string>
</resources>
